--- a/client/public/index.html
+++ b/client/public/index.html
@@ -16,7 +16,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@600;800&display=swap" rel="stylesheet">
 
 
-    <title>React App</title>
+    <title>AfterLife</title>
   </head>
   <body style="background-color: #272727; height: 150vh">
     <noscript>You need to enable JavaScript to run this app.</noscript>
