--- a/client/public/index.html
+++ b/client/public/index.html
@@ -18,9 +18,8 @@
 
     <title>AfterLife</title>
   </head>
-  <body style="background-color: #272727; height: 150vh">
+  <body style="background-color: #272727;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
-  <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
 </html>
