--- a/client/public/index.html
+++ b/client/public/index.html
@@ -19,7 +19,7 @@
 
     <title>AfterLife</title>
   </head>
-  <body style="background-color: #272727;">
+  <body style="background-color: #0f0f0f;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
