redesign home page and ModelProfile.js

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -15,11 +15,11 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@600;800&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@500&display=swap" rel="stylesheet">
-
+    <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:opsz@6..12&family=Onest:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
     <title>AfterLife</title>
   </head>
-  <body style="background-color: #0f0f0f;">
+  <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
